# browsecomp

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FILE_SHA256SUMS.txt  LICENSE  Makefile  README.md  SECURITY.md  STAR_IMPLEMENTATION.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-dev-tested.txt  requirements-tested.txt
.github/workflows/: ci.yml
configs/: headline.yaml  quality.yaml  schema.json  smoke.yaml  star-dev-baseline.yaml  star-headline.yaml  star-smoke.yaml
data/: README.md
docs/: ARCHITECTURE.md  COMPARISON_CAMPAIGNS.md  GRADING.md  KNOWN_LIMITATIONS.md  MODEL_API.md  PROTOCOL.md  QUICKSTART.md  REPORTING.md  REPRODUCIBILITY.md  SEARCH_AND_BROWSER.md  SECURITY_AND_PRIVACY.md  SUBSET_AND_DATA.md  TROUBLESHOOTING.md  VALIDATION.md
prompts/: star_browsecomp_system.md
scripts/: bootstrap.sh  bootstrap_oracle_sources.py  build_campaign_ledger.py  decrypt_transcript.py  doctor.sh  finalize_scripted_trace.py  generate_fernet_key.py  generate_schema.py  headline.sh  mock_openai_server.py  package.sh  package_repo.py  prepare.sh  prepare_star.sh  quality.sh  run_full_guided_training.py  run_guided_item.py  run_star_headline.sh  run_star_smoke.sh  smoke.sh  star-env.sh  update_checksums.py  verify_archive.py  verify_archive.sh  watch_star_run.py
src/browsecomp250/: __init__.py  agent_external.py  (+16 more)
tests/: test_agent.py  test_agent_external.py  test_browser.py  test_cache.py  test_campaign.py  test_cli.py  test_compare.py  test_config.py  test_crypto.py  test_dataset.py  test_engine.py  test_external.py  test_geo.py  test_grading.py  test_guided_training.py  test_llm_client.py  test_oracle_sources.py  test_protocol.py  test_report.py  test_sanitize.py  test_search.py  test_storage.py  test_subset.py  test_url_safety.py  test_watcher.py
(+39 files in other folders)
