[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "browsecomp250"
version = "0.1.0"
description = "Reproducible BrowseComp-250 runner for OpenAI-compatible model APIs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "FrontierRL" }]
keywords = ["BrowseComp", "benchmark", "agents", "web search", "evaluation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "cryptography>=43,<47",
  "httpx>=0.27,<1",
  "markdownify>=0.13,<2",
  "platformdirs>=4,<5",
  "python-dotenv>=1,<2",
  "pydantic>=2.11,<3",
  "pypdf>=5,<7",
  "PyYAML>=6,<7",
  "rich>=13,<16",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
browser = ["playwright>=1.50,<2"]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
bc250 = "browsecomp250.cli:app"
browsecomp250 = "browsecomp250.cli:app"

[project.urls]
Homepage = "https://openai.com/index/browsecomp/"
Source = "https://github.com/openai/simple-evals"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
browsecomp250 = ["data/*.json"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: tests that exercise multiple components",
  "live: tests that require external services",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
